# UCAIR3D

./: .gitignore  ImageViewPort.py  MANIFEST.in  README.md  Ui_display_settings_widget.py  Ui_threshold_widget.py  VERSION  colormap_widget.py  config.py  display_settings_widget.py  display_settings_widget_backup.py  enumerations.py  header_info_dialog.py  image3D.py  interaction_method.py  paint_brush.py  pyproject.toml  qtd_display_settings_widget.py  requirements.txt  setup.py  threshold_widget.py  thresholding_widget.py  viewport.py  viewport_matplotlib.py  viewport_pyqtgraph.py
src/: Ui_discreteColorsFrame.py  Ui_display_settings_widget.py  Ui_threshold_widget.py  discreteColorsFrame.py  enumerations.py  image3D.py  mycolors.py  setup.py  threshold_widget.py  threshold_widget_frame.py  toolbar.py  viewport.py
tests/: testViewport.py  test_image_3d.py
ucair3d/: __init__.py  config.py  ucair3d_mini_app.py
ucair3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ucair3d/components/: UCAIR3D.py  UCAIR3DMainWindow.py  active_combo_controller.py  colormapCombo.py  colormap_combo_widget.py  colormap_utils.py  custom_image_view.py  discreteColorsUI.py  discrete_colors_widget.py  displaySettingsUI.py  display_settings_widget.py  histogram_widget.py  image3D.py  paint_brush.py  platform_utils.py  scratch.py  svg.py  threshold_widget.py  viewport.py  (+1 more)
ui/: Ui_discreteColorsFrame.ui  Ui_display_settings_widget - Copy.ui  Ui_display_settings_widget.ui  Ui_threshold_widget.ui  discreteColorsFrame.ui  display_settings_frame.ui  qtd_display_settings_widget.ui
(+23 files in other folders)
